--- a/rush.yaml
+++ b/rush.yaml
@@ -130994,7 +130994,7 @@ yugipedia_page_id: 1038381
 ---
 konami_id:
 name:
-  en: Deity of Seven Treasures - Ryosai
+  en: Deity of Seven Treasures - Ryozai
   de:
   es:
   fr:
@@ -131052,7 +131052,7 @@ atk: 1700
 def: 2700
 images:
 - index: 1
-  image: DeityofSevenTreasuresRyosai-RDKP16-JP-OP.png
+  image: DeityofSevenTreasuresRyozai-RDKP16-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP16-JP036
