--- a/data/cards/39618799.yaml
+++ b/data/cards/39618799.yaml
@@ -8,9 +8,9 @@ name:
   it: Cyber Angelo Dakini
   pt: Ciber Anja Dakini
   ja: サイバー・エンジェル－<ruby>荼<rt>だ</rt></ruby><ruby>吉<rt>き</rt></ruby><ruby>尼<rt>に</rt></ruby>－
-  ja_romaji: Saibā Enjeru - Dakini -
+  ja_romaji: Saibā Enjeru -Dakini-
   ko: 사이버 엔젤－다키니－
-  ko_rr: Saibeo Enjel - Dakini
+  ko_rr: Saibeo Enjel -Dakini-
   zh-TW:
   zh-CN: 电子天使－荼吉尼－
 text:
