--- a/data/cards/04796100.yaml
+++ b/data/cards/04796100.yaml
@@ -89,6 +89,7 @@ sets:
     set_name: Maze of Millennia
     rarities:
     - Rare
+    - Collector's Rare
   de:
   - set_number: ABPF-DE092
     set_name: Absolute Powerforce
@@ -114,6 +115,7 @@ sets:
     set_name: Maze of Millennia
     rarities:
     - Rare
+    - Collector's Rare
   fr:
   - set_number: ABPF-FR092
     set_name: Absolute Powerforce
@@ -139,6 +141,7 @@ sets:
     set_name: Maze of Millennia
     rarities:
     - Rare
+    - Collector's Rare
   it:
   - set_number: ABPF-IT092
     set_name: Absolute Powerforce
@@ -164,6 +167,7 @@ sets:
     set_name: Maze of Millennia
     rarities:
     - Rare
+    - Collector's Rare
   pt:
   - set_number: YGLD-PTB41
     set_name: Yugi's Legendary Decks
@@ -177,6 +181,7 @@ sets:
     set_name: Maze of Millennia
     rarities:
     - Rare
+    - Collector's Rare
   ja:
   - set_number: G4-B2
     set_name: 'Yu-Gi-Oh! Duel Monsters 4: Battle of Great Duelist Game Guide 2 promotional card'
