--- a/data/cards/07473735.yaml
+++ b/data/cards/07473735.yaml
@@ -52,26 +52,31 @@ sets:
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
   de:
   - set_number: MZMI-DE035
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
   fr:
   - set_number: MZMI-FR035
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
   it:
   - set_number: MZMI-IT035
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
   pt:
   - set_number: MZMI-PT035
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
   ja:
   - set_number: AC03-JP025
     set_name: Animation Chronicle 2023
