--- a/data/cards/23446369.yaml
+++ b/data/cards/23446369.yaml
@@ -45,26 +45,31 @@ sets:
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
   de:
   - set_number: MZMI-DE011
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
   fr:
   - set_number: MZMI-FR011
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
   it:
   - set_number: MZMI-IT011
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
   pt:
   - set_number: MZMI-PT011
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
   ja:
   - set_number: AC03-JP001
     set_name: Animation Chronicle 2023
