--- a/data/cards/42790071.yaml
+++ b/data/cards/42790071.yaml
@@ -65,6 +65,7 @@ sets:
     set_name: Maze of Millennia
     rarities:
     - Rare
+    - Collector's Rare
   de:
   - set_number: FLOD-DE014
     set_name: Flames of Destruction
@@ -82,6 +83,7 @@ sets:
     set_name: Maze of Millennia
     rarities:
     - Rare
+    - Collector's Rare
   fr:
   - set_number: FLOD-FR014
     set_name: Flames of Destruction
@@ -99,6 +101,7 @@ sets:
     set_name: Maze of Millennia
     rarities:
     - Rare
+    - Collector's Rare
   it:
   - set_number: FLOD-IT014
     set_name: Flames of Destruction
@@ -116,6 +119,7 @@ sets:
     set_name: Maze of Millennia
     rarities:
     - Rare
+    - Collector's Rare
   pt:
   - set_number: FLOD-PT014
     set_name: Flames of Destruction
@@ -133,6 +137,7 @@ sets:
     set_name: Maze of Millennia
     rarities:
     - Rare
+    - Collector's Rare
   ja:
   - set_number: FLOD-JP014
     set_name: Flames of Destruction
