--- a/data/cards/47051709.yaml
+++ b/data/cards/47051709.yaml
@@ -45,26 +45,31 @@ sets:
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
   de:
   - set_number: MZMI-DE024
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
   fr:
   - set_number: MZMI-FR024
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
   it:
   - set_number: MZMI-IT024
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
   pt:
   - set_number: MZMI-PT024
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
   ja:
   - set_number: AC03-JP014
     set_name: Animation Chronicle 2023
