--- a/data/cards/85106525.yaml
+++ b/data/cards/85106525.yaml
@@ -40,26 +40,31 @@ sets:
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
   de:
   - set_number: MZMI-DE016
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
   fr:
   - set_number: MZMI-FR016
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
   it:
   - set_number: MZMI-IT016
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
   pt:
   - set_number: MZMI-PT016
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
   ja:
   - set_number: AC03-JP006
     set_name: Animation Chronicle 2023
