--- a/data/cards/99529628.yaml
+++ b/data/cards/99529628.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 游魊之胧 基夫
 text:
   en: |-
-    If you control a Fish monster: You can Special Summon this card from your hand. If a monster(s) is Special Summoned to your opponent's field (except during the Damage Step): You can target 1 of them and 1 of your banished Level 6 or lower Fish monsters; banish both that opponent's target and this card, and if you do, Special Summon your targeted monster. During the Standby Phase of the next turn after this card was banished: You can Special Summon this banished card. You can only use each effect of "Kiif, Haze of the Ghoti" once per turn.
+    If there is a Fish monster on the field: You can Special Summon this card from your hand. If a monster(s) is Special Summoned to your opponent's field (except during the Damage Step): You can target 1 of them and 1 of your banished Level 6 or lower Fish monsters; banish both that opponent's target and this card, and if you do, Special Summon your targeted monster. During the Standby Phase of the next turn after this card was banished: You can Special Summon this banished card. You can only use each effect of "Kiif, Haze of the Ghoti" once per turn.
   de:
   es:
   fr:
