--- a/rush.yaml
+++ b/rush.yaml
@@ -131077,7 +131077,7 @@ name:
   it:
   pt:
   ja: ダイスキー・キャラメイル
-  ja_romaji:
+  ja_romaji: Daisukī Kyarameiru
   ko:
   ko_rr:
   zh-TW:
@@ -131139,7 +131139,7 @@ name:
   it:
   pt:
   ja: ダイスキー・ミンナ
-  ja_romaji:
+  ja_romaji: Daisukī Minna
   ko:
   ko_rr:
   zh-TW:
@@ -131199,7 +131199,7 @@ name:
   it:
   pt:
   ja: ダイスマイトガール・チロリ
-  ja_romaji:
+  ja_romaji: Daisumaito Gāru Chirori
   ko:
   ko_rr:
   zh-TW:
