--- a/data/rush/yugipedia1038470.yaml
+++ b/data/rush/yugipedia1038470.yaml
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 "Graceful Dice" from your Graveyard to your hand. Then, if your opponent has 2 or more monsters on their field, roll a six-sided die. If you roll a number other than 6, gain 600 LP.
+    Add 1 "Graceful Dice" from your Graveyard to your hand. Then, if your opponent has 2 or more monsters on their field, roll a six-sided die. Gain 600 LP if you roll a number other than 6.
   de:
   es:
   fr:
