--- a/data/rush/yugipedia1038471.yaml
+++ b/data/rush/yugipedia1038471.yaml
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 "Skull Dice" from your Graveyard to your hand. Then, if your opponent has 2 or more monsters on their field, roll a six-sided die. If you roll a number other than 1, inflict 600 damage to your opponent.
+    Add 1 "Skull Dice" from your Graveyard to your hand. Then, if your opponent has 2 or more monsters on their field, roll a six-sided die. Inflict 600 damage to your opponent if you roll a number other than 1.
   de:
   es:
   fr:
