--- a/data/cards/51296484.yaml
+++ b/data/cards/51296484.yaml
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Você pode descartar este card; envie para o Cemitério 1 Magia de Ritual e, depois, você pode adicionar 1 Guerreiro de Luz ou Monstro Ritual do Tipo Dragão do seu Deck ou Cemitério à sua mão. Você pode banir este card do seu Cemitério; Invoque por Invocação-Especial 1 Guerreiro de Luz ou Monstro Ritual do tipo Dragão da sua mão, ao oferecer como Tributo monstros da sua mão ou do campo cuja soma dos Níveis seja igual ou exceda o Nível do Monstro de Ritual que você Invocou por Invocação-Ritual. Você só pode usar cada efeito de "Saffira, the Wise Silenforcer Queen" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードを手札から捨てて発動できる。デッキから儀式魔法カード１枚を墓地へ送る。その後、戦士族・ドラゴン族で光属性の儀式モンスター１体を自分のデッキ・墓地から手札に加える事ができる。②：墓地のこのカードを除外して発動できる。レベルの合計が儀式召喚するモンスターのレベル以上になるように、自分の手札・フィールドのモンスターをリリースし、手札から戦士族・ドラゴン族で光属性の儀式モンスター１体を儀式召喚する。
   ko: |-
