--- a/data/cards/52472775.yaml
+++ b/data/cards/52472775.yaml
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Este card pode ser usado para a Invocação-Ritual de qualquer Monstro de Ritual de LUZ. Você também deve oferecer como Tributo monstros de Luz da sua mão ou do campo cuja soma dos Níveis seja exatamente igual ao Nível do Monstro de Ritual que você Invocar por Invocação-Ritual. Se um ou mais monstros de Ritual de LUZ com a face para cima que você controla deixarem o campo por um efeito de card do oponente (exceto durante a Etapa de Dano): você pode banir este card do seu Cemitério; Invoque por Invocação-Especial 1 "Sauravis, the Ancient and Ascended", "Saffira, Queen of Dragons", ou "Skull Guardian, the Silenforcing Protector" da sua mão ou do Deck, ignorando suas condições de Invocação. Você só pode usar este efeito de "Silenforcing Prayer" uma vez por turno.
   ja: |-
     このカード名の②の効果は１ターンに１度しか使用できない。①：レベルの合計が儀式召喚するモンスターのレベル以上になるように、自分の手札・フィールドの光属性モンスターをリリースし、手札から光属性の儀式モンスター１体を儀式召喚する。②：自分フィールドの表側表示の光属性の儀式モンスターが相手の効果でフィールドから離れた場合、墓地のこのカードを除外して発動できる。手札・デッキから「古聖戴サウラヴィス」「竜姫神サフィラ」「粛声なる守護者ローガーディアン」のいずれか１体を召喚条件を無視して特殊召喚する。
   ko: |-
