--- a/data/cards/86310763.yaml
+++ b/data/cards/86310763.yaml
@@ -23,7 +23,11 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Durante a Fase Principal: você pode ativar 1 desses efeitos.
+    ● Embaralhe no Deck 1 Guerreiro de LUZ ou Monstro de Ritual do Tipo Dragão ou Magia de Ritual da sua mão ou Cemitério e, se isso acontecer, pegue do seu Deck 1 monstro "Silenforc", e adicione-o à sua mão ou Invoque-o por Invocação-Especial.
+    ● Escolha cards que seu oponente controla até o número de Guerreiro de LUZ e Monstro de Ritual do Tipo Dragon que você controla; destrua tanto os alvos quanto esta carta.
+    Você só pode usar este efeito de "Silenforcing Authority" uma vez por turno.
   ja: |-
     このカード名の①の効果は１ターンに１度しか使用できない。①：自分・相手のメインフェイズに、以下の効果から１つを選択して発動できる。●自分の手札・墓地から、戦士族・ドラゴン族で光属性の儀式モンスター１体または儀式魔法カード１枚をデッキに戻し、デッキから「粛声」モンスター１体を選び、手札に加えるか特殊召喚する。●自分フィールドの戦士族・ドラゴン族で光属性の儀式モンスターの数まで、相手フィールドのカードを対象として発動できる。そのカードとこのカードを破壊する。
   ko: |-
