--- a/data/cards/98477480.yaml
+++ b/data/cards/98477480.yaml
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Enquanto você controlar "Novox, the Silenforcer Disciple" e um Monstro de Ritual de LUZ, os monstros do seu oponente só podem escolher monstros de Ritual como alvo de ataques e, além disso, seu oponente não pode escolher monstros monstros de LUZ que você controla como alvo de efeitos de card. Durante sua Fase Principal: você pode adicionar 1 card "Silenforc" ou 1 Monstro de Ritual "Skull Guardian" do seu Deck à sua mão, exceto "Silenforcing Barrier". Você só pode usar este efeito de "Silenforcing Barrier" uma vez por turno.
   ja: |-
     このカード名の②の効果は１ターンに１度しか使用できない。①：自分フィールドに「粛声の祈り手ロー」及び光属性の儀式モンスターが存在する限り、相手モンスターは儀式モンスターしか攻撃対象に選択できず、自分フィールドの光属性モンスターを相手は効果の対象にできない。②：自分メインフェイズに発動できる。「粛声なる結界」を除く、「粛声」カード１枚か「ローガーディアン」儀式モンスター１体をデッキから手札に加える。
   ko: |-
