--- a/data/cards/yugipedia1034528.yaml
+++ b/data/cards/yugipedia1034528.yaml
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Você pode Invocar este card por Invocação-Ritual com "Silenforcing Blessing". Se este card for Invocado por Invocação-Ritual e você tiver "Novox, the Silenforcer Disciple" no seu campo ou Cemitério: você pode comprar 2 cards e, depois, descarte 1 card. Quando um ataque for declarado envolvendo um Guerreiro de Luz ou Monstro Ritual do Tipo Dragão: você pode descartar 1 card aleatório da mão do seu oponente. Durante a Fase Final do seu oponente: você pode adicionar 1 monstro de Luz do seu Cemitério à sua mão. Você só pode usar cada efeito de "Saffira, the Silenforcing Deity of Dragons" uma vez por turno.
   ja:
   ko:
   zh-TW:
