--- a/rush.yaml
+++ b/rush.yaml
@@ -131500,7 +131500,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Roll a six-sided die. This card can attack a number of times equal to [the result] during this turn. Then, if the result was 3 or lower, you can draw 1 card.
+    Roll a six-sided die. This card can attack a number of times equal to [the result] during this turn. Then, you can draw 1 card if the result is 3 or lower.
   de:
   es:
   fr:
