--- a/rush.yaml
+++ b/rush.yaml
@@ -131651,3 +131651,366 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1038474
+---
+konami_id:
+name:
+  en: Praime Phantomite
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: プライム・ファントマイト
+  ja_romaji: Puraimu Fantomaito
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Shuffle 2 LIGHT Attribute monsters from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Change 1 Level 7 or higher Attack Position monster on the field to face-down Defense Position. Then, each player excavates the top 3 cards of their Deck. Each player places their excavated cards on top of their Deck in any order.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Wyrm / Effect
+attribute: LIGHT
+level: 1
+atk: 800
+def: 0
+series:
+- Praime
+images:
+- index: 1
+  image: PraimePhantomite-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP002
+    set_name: Transamu of Transcendence
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1038549
+---
+konami_id:
+name:
+  en: Praime Claw Girl
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: プライムクロー・ガール
+  ja_romaji: Puraimukurō Gāru
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    You can Tribute Summon this card in Attack Position by Tributing 1 monster. If you do, its original ATK becomes 200.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Place 2 cards from your hand on the bottom of the Deck in any order.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 LIGHT Attribute Normal Monster from your Graveyard to your field in face-up Defense Position. Then, you can add 1 "Fusion" from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Effect
+attribute: LIGHT
+level: 7
+atk: 2200
+def: 200
+series:
+- Praime
+images:
+- index: 1
+  image: PraimeClawGirl-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP004
+    set_name: Transamu of Transcendence
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1038550
+---
+konami_id:
+name:
+  en: Praime Tractiger
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: プライム・トラクタイガー
+  ja_romaji: Puraimu Torakutaigā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    You can Tribute Summon this card in Attack Position by Tributing 1 monster. If you do, its original ATK becomes 1800.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 monster from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Choose 1 face-up monster on your field. If it attacks a Defense Position monster this turn, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Machine / Effect
+attribute: LIGHT
+level: 7
+atk: 2500
+def: 1000
+series:
+- Praime
+images:
+- index: 1
+  image: PraimeTractiger-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP005
+    set_name: Transamu of Transcendence
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1038551
+---
+konami_id:
+name:
+  en: Praime Pierce Giant
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: プライム・ピアース・ジャイアント
+  ja_romaji: Puraimu Piāsu Jaianto
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    If your Level 7 or higher LIGHT Attribute monster attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). During your opponent's turn, monsters on your field cannot be used as material for a Fusion Summon.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Fusion / Effect
+attribute: LIGHT
+level: 7
+atk: 2500
+def: 0
+materials:
+  en: |-
+    "Praime Dwarf" + 1 Level 8 or lower LIGHT Attribute monster
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Praime
+images:
+- index: 1
+  image: PraimePierceGiant-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP037
+    set_name: Transamu of Transcendence
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1038552
+---
+konami_id:
+name:
+  en: Praime Cat Straynya
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: プライムキャット・ストライニャー
+  ja_romaji: Puraimukyatto Sutorainyā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    Face-up Level 7 or higher LIGHT Attribute monsters on your field gain 200 ATK and cannot be destroyed by your opponent's card effects.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Beast-Warrior / Fusion / Effect
+attribute: LIGHT
+level: 9
+atk: 2900
+def: 200
+materials:
+  en: |-
+    "Praime Claw Girl" + 1 LIGHT Attribute monster
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Cat
+- Praime
+images:
+- index: 1
+  image: PraimeCatStraynya-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP038
+    set_name: Transamu of Transcendence
+    rarities:
+    - Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1038553
