--- a/data/cards/15845914.yaml
+++ b/data/cards/15845914.yaml
@@ -44,8 +44,10 @@ def: 2500
 images:
 - index: 1
   image: MagiciansofBondsandUnity-DUNE-EN-QCScR-1E.png
+  illustration: MagiciansofBondsandUnity-MADU-EN-VG-artwork.png
 - index: 2
   image: MagiciansofBondsandUnity-AGOV-EN-QCScR-1E.png
+  illustration: MagiciansofBondsandUnity-CA-2.png
 - index: 3
   image: MagiciansofBondsandUnity-PHNI-JP-QCScR.png
   illustration: MagiciansofBondsandUnity-OW-3.png
