--- a/data/rush/yugipedia1038553.yaml
+++ b/data/rush/yugipedia1038553.yaml
@@ -28,7 +28,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    Face-up Level 7 or higher LIGHT Attribute monsters on your field gain 200 ATK and cannot be destroyed by your opponent's card effects.
+    Face-up Level 7 or higher LIGHT Attribute monsters on your field gain 200 ATK, and cannot be destroyed by your opponent's card effects.
   de:
   es:
   fr:
