--- a/data/rush/yugipedia1038549.yaml
+++ b/data/rush/yugipedia1038549.yaml
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change 1 Level 7 or higher Attack Position monster on the field to face-down Defense Position. Then, each player excavates the top 3 cards of their Deck. Each player places their excavated cards on top of their Deck in any order.
+    Change 1 Level 7 or higher Attack Position monster on the field to face-down Defense Position. Then, each player excavates the top 3 cards of their Deck. Each player places their excavated cards on the top of their Deck in any order.
   de:
   es:
   fr:
