--- a/rush.yaml
+++ b/rush.yaml
@@ -131680,7 +131680,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change 1 Level 7 or higher Attack Position monster on the field to face-down Defense Position. Then, each player excavates the top 3 cards of their Deck. Each player places their excavated cards on top of their Deck in any order.
+    Change 1 Level 7 or higher Attack Position monster on the field to face-down Defense Position. Then, each player excavates the top 3 cards of their Deck. Each player places their excavated cards on the top of their Deck in any order.
   de:
   es:
   fr:
@@ -131968,7 +131968,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    Face-up Level 7 or higher LIGHT Attribute monsters on your field gain 200 ATK and cannot be destroyed by your opponent's card effects.
+    Face-up Level 7 or higher LIGHT Attribute monsters on your field gain 200 ATK, and cannot be destroyed by your opponent's card effects.
   de:
   es:
   fr:
