--- a/data/cards/80770678.yaml
+++ b/data/cards/80770678.yaml
@@ -61,6 +61,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Rare
+  - set_number: SATS-EN003
+    set_name: 2-Player Starter Set
+    rarities:
+    - Common
   - set_number: LOB-078
     set_name: Legend of Blue Eyes White Dragon
     rarities:
@@ -102,6 +106,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Rare
+  - set_number: SATS-DE003
+    set_name: 2-Player Starter Set
+    rarities:
+    - Common
   fr:
   - set_number: LDD-F061
     set_name: Legend of Blue Eyes White Dragon
@@ -123,6 +131,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Rare
+  - set_number: SATS-FR003
+    set_name: 2-Player Starter Set
+    rarities:
+    - Common
   it:
   - set_number: LDD-I061
     set_name: Legend of Blue Eyes White Dragon
@@ -144,6 +156,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Rare
+  - set_number: SATS-IT003
+    set_name: 2-Player Starter Set
+    rarities:
+    - Common
   pt:
   - set_number: LDB-P078
     set_name: Legend of Blue Eyes White Dragon
@@ -157,6 +173,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Rare
+  - set_number: SATS-PT003
+    set_name: 2-Player Starter Set
+    rarities:
+    - Common
   ja:
   - set_number: ''
     set_name: Vol.2
