--- a/data/cards/97923414.yaml
+++ b/data/cards/97923414.yaml
@@ -51,6 +51,10 @@ sets:
     set_name: Dark Revelation Volume 1
     rarities:
     - Common
+  - set_number: SATS-EN002
+    set_name: 2-Player Starter Set
+    rarities:
+    - Common
   - set_number: PGD-055
     set_name: Pharaonic Guardian
     rarities:
@@ -60,9 +64,17 @@ sets:
     set_name: Dark Revelation Volume 1
     rarities:
     - Common
+  - set_number: SATS-DE002
+    set_name: 2-Player Starter Set
+    rarities:
+    - Common
   fr:
   - set_number: DR1-FR003
     set_name: Dark Revelation Volume 1
+    rarities:
+    - Common
+  - set_number: SATS-FR002
+    set_name: 2-Player Starter Set
     rarities:
     - Common
   it:
@@ -70,9 +82,17 @@ sets:
     set_name: Dark Revelation Volume 1
     rarities:
     - Common
+  - set_number: SATS-IT002
+    set_name: 2-Player Starter Set
+    rarities:
+    - Common
   pt:
   - set_number: DR1-PT003
     set_name: Dark Revelation Volume 1
+    rarities:
+    - Common
+  - set_number: SATS-PT002
+    set_name: 2-Player Starter Set
     rarities:
     - Common
   ja:
