--- a/data/cards/20721928.yaml
+++ b/data/cards/20721928.yaml
@@ -100,6 +100,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: SATS-EN001
+    set_name: 2-Player Starter Set
+    rarities:
+    - Common
   - set_number: YSD-ENS01
     set_name: 'Starter Deck 2006: Special Edition'
     rarities:
@@ -169,6 +173,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: SATS-DE001
+    set_name: 2-Player Starter Set
+    rarities:
+    - Common
   fr:
   - set_number: TLM-FR004
     set_name: The Lost Millennium
@@ -212,6 +220,10 @@ sets:
     - Common
   - set_number: SGX3-FRA05
     set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+  - set_number: SATS-FR001
+    set_name: 2-Player Starter Set
     rarities:
     - Common
   it:
@@ -267,6 +279,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: SATS-IT001
+    set_name: 2-Player Starter Set
+    rarities:
+    - Common
   pt:
   - set_number: TLM-PT004
     set_name: The Lost Millennium
@@ -290,6 +306,10 @@ sets:
     - Common
   - set_number: SGX3-PTA05
     set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+  - set_number: SATS-PT001
+    set_name: 2-Player Starter Set
     rarities:
     - Common
   ja:
