--- a/data/rush/15913.yaml
+++ b/data/rush/15913.yaml
@@ -77,4 +77,8 @@ sets:
     set_name: Go Rush Deck Bonus Cards
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/SD0A-KR034
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
 yugipedia_page_id: 717202
