--- a/data/rush/16308.yaml
+++ b/data/rush/16308.yaml
@@ -58,4 +58,8 @@ sets:
     set_name: Strongest Battle Deck Yuamu - Come Forth! High Tech Dragon!
     rarities:
     - Common
+  - set_number: RD/SD0A-KR016
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
 yugipedia_page_id: 717069
