--- a/data/rush/18580.yaml
+++ b/data/rush/18580.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja:
   ja_romaji:
-  ko:
+  ko: 침묵의 죽은자
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ requirement:
   pt:
   ja: |-
     なし
-  ko:
+  ko: |-
+    없음
   zh-TW:
   zh-CN:
 effect:
@@ -35,7 +36,8 @@ effect:
   pt:
   ja: |-
     自分の墓地の通常モンスター１体を選び、自分フィールドに表側守備表示で特殊召喚する。この効果で特殊召喚したモンスターは表側表示の間、攻撃できない。
-  ko:
+  ko: |-
+    자신 묘지의 일반 몬스터 1장을 고르고, 자신 필드에 앞면 수비 표시로 특수 소환한다. 이 효과로 특수 소환한 몬스터는 앞면 표시인 동안, 공격할 수 없다.
   zh-TW:
   zh-CN:
 card_type: Spell
@@ -50,6 +52,11 @@ sets:
     rarities:
     - Normal Parallel Rare
   - set_number: RD/SD0A-JP033
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
+  ko:
+  - set_number: RD/SD0A-KR033
     set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
     rarities:
     - Common
