--- a/data/rush/18593.yaml
+++ b/data/rush/18593.yaml
@@ -64,6 +64,10 @@ sets:
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
     - Common
+  - set_number: RD/SD0A-KR025
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
 is_translation_unofficial:
   name:
     en: true
