--- a/data/rush/18651.yaml
+++ b/data/rush/18651.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja:
   ja_romaji:
-  ko:
+  ko: 요정 드래곤
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ text:
   pt:
   ja: |-
     妖精の中では意外と強い、とてもきれいなドラゴンの妖精。
-  ko:
+  ko: |-
+    요정 중에서는 의외로 강한, 아주 아름다운 드래곤 요정.
   zh-TW:
   zh-CN:
 card_type: Monster
@@ -41,6 +42,11 @@ sets:
     rarities:
     - Common
   - set_number: RD/SD0A-JP018
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
+  ko:
+  - set_number: RD/SD0A-KR018
     set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
     rarities:
     - Common
