--- a/data/rush/19434.yaml
+++ b/data/rush/19434.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja:
   ja_romaji:
-  ko:
+  ko: 궁극의 푸른 눈의 백룡
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ text:
   pt:
   ja: |-
     「青眼の白龍」＋「青眼の白龍」＋「青眼の白龍」
-  ko:
+  ko: |-
+    "푸른 눈의 백룡" ＋ "푸른 눈의 백룡" ＋ "푸른 눈의 백룡"
   zh-TW:
   zh-CN:
 card_type: Monster
@@ -56,6 +57,15 @@ sets:
     rarities:
     - Ultra Rare
   - set_number: RD/SD0A-JPS01
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Over Rush Rare
+  ko:
+  - set_number: RD/SD0A-KR001
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Ultra Rare
+  - set_number: RD/SD0A-KRS01
     set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
     rarities:
     - Over Rush Rare
