--- a/data/rush/15172.yaml
+++ b/data/rush/15172.yaml
@@ -92,4 +92,8 @@ sets:
     set_name: Strongest Battle Deck Yuamu - Come Forth! High Tech Dragon!
     rarities:
     - Common
+  - set_number: RD/SD0A-KR023
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
 yugipedia_page_id: 716224
