--- a/data/rush/15174.yaml
+++ b/data/rush/15174.yaml
@@ -45,7 +45,7 @@ effect:
   ja: |-
     お互いのフィールドのモンスターを全て破壊する。その後、自分の墓地のモンスター（レベル４以下／ドラゴン族）１体を選んで自分フィールドに表側守備表示で特殊召喚できる。
   ko: |-
-    서로의 필드의 몬스터를 전부 파괴한다. 그 후, 자신 묘지의 몬스터(레벨 4 이하 / 드래곤족) 1장을 고르고, 자신 필드에 앞면 수비 표시로 특수 소환할 수 있다.
+    서로의 필드의 몬스터를 전부 파괴한다. 그 후, 자신 묘지의 몬스터(레벨 4 이하 / 드래곤족) 1장을 고르고 자신 필드에 앞면 수비 표시로 특수 소환할 수 있다.
   zh-TW:
   zh-CN:
 card_type: Spell
@@ -80,6 +80,10 @@ sets:
     - Rare
   - set_number: RD/SD03-KR027
     set_name: Strongest Battle Deck Yuamu - Come Forth! High Tech Dragon!
+    rarities:
+    - Common
+  - set_number: RD/SD0A-KR031
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
     rarities:
     - Common
 yugipedia_page_id: 714659
