--- a/data/rush/15184.yaml
+++ b/data/rush/15184.yaml
@@ -92,4 +92,8 @@ sets:
     set_name: Over Rush Pack
     rarities:
     - Over Rush Rare
+  - set_number: RD/SD0A-KR002
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Ultra Rare
 yugipedia_page_id: 714033
