--- a/data/rush/15203.yaml
+++ b/data/rush/15203.yaml
@@ -45,7 +45,7 @@ effect:
   ja: |-
     自分フィールドのモンスター１体を選ぶ。このターン、そのモンスターは相手の効果では破壊されない。
   ko: |-
-    자신 필드의 몬스터 1장을 고른다. 이 턴에 그 몬스터는 상대 효과로는 파괴되지 않는다.
+    자신 필드의 몬스터 1장을 고른다. 이 턴에, 그 몬스터는 상대 효과로는 파괴되지 않는다.
   zh-TW:
   zh-CN:
 card_type: Monster
@@ -82,4 +82,8 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: RD/SD0A-KR024
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
 yugipedia_page_id: 714501
