--- a/data/rush/15798.yaml
+++ b/data/rush/15798.yaml
@@ -72,4 +72,8 @@ sets:
     set_name: 'Deck Mod Pack: Illusion Strike Mirage Impact!!'
     rarities:
     - Super Rare
+  - set_number: RD/SD0A-KR013
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
 yugipedia_page_id: 714186
