--- a/data/rush/15799.yaml
+++ b/data/rush/15799.yaml
@@ -45,7 +45,7 @@ effect:
   ja: |-
     このカードの攻撃力はターン終了時まで６００アップする。その後、自分の墓地の「クリア・アイス・ドラゴン」「バーニング・ブレイズ・ドラゴン」を１体ずつ選んでデッキに戻す事ができる。戻した場合、さらに相手フィールドの表側表示モンスター（守備力１５００以下）１体を選んで破壊できる。
   ko: |-
-    이 카드의 공격력은 턴 종료시까지 600 올린다. 자신 묘지에 "클리어 아이스 드래곤"과 "버닝 브레이즈 드래곤"이 있을 경우, 그 2장을 덱으로 되돌릴 수 있다. 되돌렸을 경우, 상대 필드의 앞면 표시 몬스터(수비력 1500 이하) 1장을 고르고 파괴할 수 있다.
+    이 카드의 공격력은 턴 종료시까지 600 올린다. 그 후, 자신 묘지의 "클리어 아이스 드래곤" "버닝 브레이즈 드래곤"을 1장씩 고르고 덱으로 되돌릴 수 있다. 되돌렸을 경우, 추가로 상대 필드의 앞면 표시 몬스터(수비력 1500 이하) 1장을 고르고 파괴할 수 있다.
   zh-TW:
   zh-CN:
 card_type: Monster
@@ -76,4 +76,8 @@ sets:
     set_name: 'Deck Mod Pack: Illusion Strike Mirage Impact!!'
     rarities:
     - Ultra Rare
+  - set_number: RD/SD0A-KR010
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
 yugipedia_page_id: 712817
