--- a/data/rush/16775.yaml
+++ b/data/rush/16775.yaml
@@ -50,4 +50,8 @@ sets:
     set_name: Strongest Battle Deck Luke - Dragon's Dragons
     rarities:
     - Common
+  - set_number: RD/SD0A-KR017
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
 yugipedia_page_id: 716975
