--- a/data/rush/17210.yaml
+++ b/data/rush/17210.yaml
@@ -67,6 +67,10 @@ sets:
     set_name: Grand Rush Pack
     rarities:
     - Super Rare
+  - set_number: RD/SD0A-KR029
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
 is_translation_unofficial:
   text:
     en: true
