--- a/data/rush/17224.yaml
+++ b/data/rush/17224.yaml
@@ -66,6 +66,10 @@ sets:
     set_name: Grand Rush Pack
     rarities:
     - Common
+  - set_number: RD/SD0A-KR022
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
 is_translation_unofficial:
   text:
     en: true
