--- a/data/rush/17721.yaml
+++ b/data/rush/17721.yaml
@@ -71,6 +71,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: RD/SD0A-KR032
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
 is_translation_unofficial:
   text:
     en: true
