--- a/data/rush/18642.yaml
+++ b/data/rush/18642.yaml
@@ -23,7 +23,7 @@ requirement:
   ja: |-
     自分フィールドに表側表示モンスター（ハイドラゴン族・ドラゴン族）がいる場合、相手モンスターの攻撃宣言時に発動できる。
   ko: |-
-    자신 필드에 앞면 표시 몬스터(하이드래곤족 또는 드래곤족)가 있을 경우, 상대 몬스터의 공격 선언시에 발동할 수 있다.
+    자신 필드에 앞면 표시 몬스터(하이드래곤족 / 드래곤족)가 있을 경우, 상대 몬스터의 공격 선언시에 발동할 수 있다.
   zh-TW:
   zh-CN:
 effect:
@@ -58,6 +58,10 @@ sets:
   ko:
   - set_number: RD/KP12-KR060
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Common
+  - set_number: RD/SD0A-KR037
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
     rarities:
     - Common
 is_translation_unofficial:
