--- a/data/rush/18695.yaml
+++ b/data/rush/18695.yaml
@@ -50,4 +50,8 @@ sets:
     set_name: Legend Awakening Pack
     rarities:
     - Rare
+  - set_number: RD/SD0A-KR009
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
 yugipedia_page_id: 715348
