--- a/data/rush/19424.yaml
+++ b/data/rush/19424.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: <ruby>青眼の煌龍<rt>ブルーアイズ・ブライト・ドラゴン</rt></ruby>
   ja_romaji: Burūaizu Buraito Doragon
-  ko:
+  ko: 푸른 눈의 브라이트 드래곤
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ summoning_condition:
   pt:
   ja: |-
     手札にいるこのカードのカード名は「青眼の白龍」になる。
-  ko:
+  ko: |-
+    패에 있는 이 카드의 카드명은 "푸른 눈의 백룡"이 된다.
   zh-TW:
   zh-CN:
 requirement:
@@ -35,7 +36,8 @@ requirement:
   pt:
   ja: |-
     デッキの一番上のカードを墓地へ送って発動できる。
-  ko:
+  ko: |-
+    덱 맨 위의 카드를 묘지로 보내고 발동할 수 있다.
   zh-TW:
   zh-CN:
 effect:
@@ -48,7 +50,8 @@ effect:
   pt:
   ja: |-
     このターン、このカードのカード名は「青眼の白龍」になり、攻撃力は５００アップする。自分フィールドに表側表示のレジェンド通常モンスターがいる場合、さらに相手フィールドの表側表示モンスター（レベル８以下）１体を選んで破壊できる。
-  ko:
+  ko: |-
+    이 턴에, 이 카드의 카드명은 "푸른 눈의 백룡"이 되고, 공격력은 500 올린다. 자신 필드에 앞면 표시의 레전드 일반 몬스터가 있을 경우, 추가로 상대 필드의 앞면 표시 몬스터(레벨 8 이하) 1장을 고르고 파괴할 수 있다.
   zh-TW:
   zh-CN:
 card_type: Monster
@@ -76,6 +79,15 @@ sets:
     set_name: Blue-Eyes Duel Set
     rarities:
     - Secret Rare
+  ko:
+  - set_number: RD/SD0A-KR003
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
+  - set_number: RD/SD0A-KRS02
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Super Rare
 is_translation_unofficial:
   name:
     en: true
