--- a/data/rush/19426.yaml
+++ b/data/rush/19426.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: ロード・オブ・ドラゴン－ドラゴンの<ruby>絶<rt>ぜっ</rt></ruby><ruby>対<rt>たい</rt></ruby><ruby>者<rt>しゃ</rt></ruby>－
   ja_romaji: Rōdo Obu Doragon - Doragon no Zettaisha -
-  ko:
+  ko: 드래곤의 절대자
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ requirement:
   pt:
   ja: |-
     このカードを召喚・特殊召喚した自分メインフェイズに発動できる。
-  ko:
+  ko: |-
+    이 카드를 일반 소환 / 특수 소환한 자신 메인 페이즈에 발동할 수 있다.
   zh-TW:
   zh-CN:
 effect:
@@ -35,7 +36,8 @@ effect:
   pt:
   ja: |-
     自分のデッキの上からカードを４枚めくり、お互いに確認する。自分はめくったカードの中からモンスター（レベル８／光属性／ドラゴン族）と「究極の青眼伝説」をそれぞれ１枚まで選んで手札に加える事ができる。残りのカードをデッキに戻す。
-  ko:
+  ko: |-
+    자신의 덱 위에서 카드를 4장 넘기고, 서로 확인한다. 자신은 넘긴 카드 중에서 몬스터(레벨 8 / 빛 속성 / 드래곤족)와 "궁극의 청안 전설"을 각각 1장까지 고르고 패에 넣을 수 있다. 남은 카드를 덱으로 되돌린다.
   zh-TW:
   zh-CN:
 card_type: Monster
@@ -56,6 +58,15 @@ sets:
     rarities:
     - Common
   - set_number: RD/SD0A-JPS04
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Super Rare
+  ko:
+  - set_number: RD/SD0A-KR005
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
+  - set_number: RD/SD0A-KRS04
     set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
     rarities:
     - Super Rare
