--- a/data/rush/19427.yaml
+++ b/data/rush/19427.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: ノード・オブ・レジェンド
   ja_romaji: Nōdo Obu Rejendo
-  ko:
+  ko: 노드 오브 레전드
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ requirement:
   pt:
   ja: |-
     このカードを召喚したターンに発動できる。
-  ko:
+  ko: |-
+    이 카드를 일반 소환한 턴에 발동할 수 있다.
   zh-TW:
   zh-CN:
 effect:
@@ -35,7 +36,8 @@ effect:
   pt:
   ja: |-
     自分のデッキの一番上のカードを墓地へ送る。その後、自分の墓地の「オリジン・オブ・レジェンド」１体または「サンクタム・オブ・レジェンド」１枚を選んで手札に加える事ができる。
-  ko:
+  ko: |-
+    자신의 덱 맨 위의 카드를 묘지로 보낸다. 그 후, 자신 묘지의 "오리진 오브 레전드" 1장 또는 "생텀 오브 레전드" 1장을 고르고 패에 넣을 수 있다.
   zh-TW:
   zh-CN:
 card_type: Monster
@@ -50,6 +52,11 @@ images:
 sets:
   ja:
   - set_number: RD/SD0A-JP006
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
+  ko:
+  - set_number: RD/SD0A-KR006
     set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
     rarities:
     - Common
