--- a/data/rush/19428.yaml
+++ b/data/rush/19428.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: ソウル・ドレイク
   ja_romaji: Souru Doreiku
-  ko:
+  ko: 소울 드레이크
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ requirement:
   pt:
   ja: |-
     このカードを召喚・特殊召喚した自分メインフェイズに、自分フィールドの表側表示の効果モンスター（レベル４以下）２体を墓地へ送って発動できる。
-  ko:
+  ko: |-
+    이 카드를 일반 소환 / 특수 소환한 자신 메인 페이즈에, 자신 필드의 앞면 표시 효과 몬스터(레벨 4 이하) 2장을 묘지로 보내고 발동할 수 있다.
   zh-TW:
   zh-CN:
 effect:
@@ -35,7 +36,8 @@ effect:
   pt:
   ja: |-
     自分の墓地のモンスター（レベル８／光属性／ドラゴン族）１体を選び、自分フィールドに表側表示で特殊召喚する。このターン、自分はモンスター（レベル７以下）で攻撃できない。
-  ko:
+  ko: |-
+    자신 묘지의 몬스터(레벨 8 / 빛 속성 / 드래곤족) 1장을 고르고, 자신 필드에 앞면 표시로 특수 소환한다. 이 턴에, 자신은 몬스터(레벨 7 이하)로 공격할 수 없다.
   zh-TW:
   zh-CN:
 card_type: Monster
@@ -56,6 +58,15 @@ sets:
     rarities:
     - Common
   - set_number: RD/SD0A-JPS05
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Super Rare
+  ko:
+  - set_number: RD/SD0A-KR007
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
+  - set_number: RD/SD0A-KRS05
     set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
     rarities:
     - Super Rare
