--- a/data/rush/19429.yaml
+++ b/data/rush/19429.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: フェニックス・ドラグーン
   ja_romaji: Fenikkusu Doragūn
-  ko:
+  ko: 피닉스 드라군
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ requirement:
   pt:
   ja: |-
     自分のデッキのカードが１０枚以上の場合、手札のモンスター１体を墓地へ送って発動できる。
-  ko:
+  ko: |-
+    자신의 덱의 카드가 10장 이상일 경우, 패의 몬스터 1장을 묘지로 보내고 발동할 수 있다.
   zh-TW:
   zh-CN:
 effect:
@@ -35,7 +36,8 @@ effect:
   pt:
   ja: |-
     自分は３００ＬＰ回復する。自分の墓地にモンスター（レベル８）がいる場合、さらに自分は１枚ドローする。
-  ko:
+  ko: |-
+    자신은 300 LP 회복한다. 자신 묘지에 몬스터(레벨 8)가 있을 경우, 추가로 자신은 1장 드로우한다.
   zh-TW:
   zh-CN:
 card_type: Monster
@@ -50,6 +52,11 @@ images:
 sets:
   ja:
   - set_number: RD/SD0A-JP008
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
+  ko:
+  - set_number: RD/SD0A-KR008
     set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
     rarities:
     - Common
