--- a/data/rush/19432.yaml
+++ b/data/rush/19432.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: サンクタム・オブ・レジェンド
   ja_romaji: Sankutamu Obu Rejendo
-  ko:
+  ko: 생텀 오브 레전드
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ requirement:
   pt:
   ja: |-
     なし
-  ko:
+  ko: |-
+    없음
   zh-TW:
   zh-CN:
 effect:
@@ -35,7 +36,8 @@ effect:
   pt:
   ja: |-
     このカードがフィールドゾーンに表側表示である限り、お互いのフィールドの表側表示モンスター（レベル８以上／ドラゴン族）の攻撃力は５００アップし、お互いのフィールドの表側表示のレジェンドモンスター（ドラゴン族）は効果では破壊されない。
-  ko:
+  ko: |-
+    이 카드가 필드 존에 앞면 표시인 한, 서로의 필드의 앞면 표시 몬스터(레벨 8 이상 / 드래곤족)의 공격력은 500 올리고, 서로의 필드의 앞면 표시의 레전드 몬스터(드래곤족)는 효과로는 파괴되지 않는다.
   zh-TW:
   zh-CN:
 card_type: Spell
@@ -46,6 +48,11 @@ images:
 sets:
   ja:
   - set_number: RD/SD0A-JP028
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
+  ko:
+  - set_number: RD/SD0A-KR028
     set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
     rarities:
     - Common
