--- a/data/cards/63035430.yaml
+++ b/data/cards/63035430.yaml
@@ -8,9 +8,9 @@ name:
   it: Grattacielo
   pt: Arranha-Céu
   ja: <ruby>摩<rt>ま</rt></ruby><ruby>天<rt>てん</rt></ruby><ruby>楼<rt>ろう</rt></ruby> －スカイスクレイパー－
-  ja_romaji: Matenrō - Sukaisukureipā -
+  ja_romaji: Matenrō -Sukaisukureipā-
   ko: 마천루－스카이스크레이퍼－
-  ko_rr: Macheonnu - Seukaiseukeureipeo
+  ko_rr: Macheonnu -Seukaiseukeureipeo-
   zh-TW:
   zh-CN: 摩天楼
 text:
