--- a/data/rush/yugipedia1039647.yaml
+++ b/data/rush/yugipedia1039647.yaml
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Set 1 "Fusion" or 1 "Fusion Cancel" from your Graveyard in your Spell & Trap Zone. Then, you can choose 1 face-up monster on your field. If you do, it cannot be destroyed by battle or card effects this turn.
+    Set 1 "Fusion" or 1 "Fusion Cancel" from your Graveyard in your Spell & Trap Zone. Then, you can choose 1 face-up monster on your field. If you do, that monster cannot be destroyed by battle or card effects this turn.
   de:
   es:
   fr:
