--- a/data/cards/31991800.yaml
+++ b/data/cards/31991800.yaml
@@ -73,6 +73,7 @@ sets:
     set_name: Maze of Millennia
     rarities:
     - Super Rare
+    - Collector's Rare
   de:
   - set_number: DOCS-DE026
     set_name: Dimension of Chaos
@@ -86,6 +87,7 @@ sets:
     set_name: Maze of Millennia
     rarities:
     - Super Rare
+    - Collector's Rare
   fr:
   - set_number: DOCS-FR026
     set_name: Dimension of Chaos
@@ -99,6 +101,7 @@ sets:
     set_name: Maze of Millennia
     rarities:
     - Super Rare
+    - Collector's Rare
   it:
   - set_number: DOCS-IT026
     set_name: Dimension of Chaos
@@ -112,6 +115,7 @@ sets:
     set_name: Maze of Millennia
     rarities:
     - Super Rare
+    - Collector's Rare
   pt:
   - set_number: DOCS-PT026
     set_name: Dimension of Chaos
@@ -125,6 +129,7 @@ sets:
     set_name: Maze of Millennia
     rarities:
     - Super Rare
+    - Collector's Rare
   ja:
   - set_number: DOCS-JP026
     set_name: Dimension of Chaos
