--- a/data/cards/73046708.yaml
+++ b/data/cards/73046708.yaml
@@ -54,26 +54,31 @@ sets:
     set_name: Maze of Millennia
     rarities:
     - Super Rare
+    - Collector's Rare
   de:
   - set_number: MZMI-DE025
     set_name: Maze of Millennia
     rarities:
     - Super Rare
+    - Collector's Rare
   fr:
   - set_number: MZMI-FR025
     set_name: Maze of Millennia
     rarities:
     - Super Rare
+    - Collector's Rare
   it:
   - set_number: MZMI-IT025
     set_name: Maze of Millennia
     rarities:
     - Super Rare
+    - Collector's Rare
   pt:
   - set_number: MZMI-PT025
     set_name: Maze of Millennia
     rarities:
     - Super Rare
+    - Collector's Rare
   ja:
   - set_number: AC03-JP015
     set_name: Animation Chronicle 2023
