--- a/rush.yaml
+++ b/rush.yaml
@@ -132285,3 +132285,143 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1039647
+---
+konami_id:
+name:
+  en: CAN - St:D
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ＣＡＮ－Ｓｔ：Ｄ
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If the only monsters in your Graveyard are Omega Psychic Type and/or Psychic Type, send 1 card from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Return 1 face-up monster from your opponent's field to the owner's hand. Then, if you have "CAN:D" in your Graveyard, gain 700 LP.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Psychic / Effect
+attribute: EARTH
+level: 7
+atk: 2400
+def: 1600
+series:
+- JAM
+images:
+- index: 1
+  image: CANStD-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP025
+    set_name: Transamu of Transcendence
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1039745
+---
+konami_id:
+name:
+  en: Celeb Rose Influencers
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: セレブローズ・インフルエンサーズ
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Place 1 monster from your opponent's Graveyard on the bottom of the Deck, and this card gains ATK equal to [the Level of the monster placed by this effect] x 200 until the end of this turn. Then, if this card is equipped with an Equip Spell Card, this turn, this card cannot be destroyed by card effects and can make up to 2 attacks on monsters.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Spellcaster / Fusion / Effect
+attribute: LIGHT
+level: 7
+atk: 2500
+def: 1600
+materials:
+  en: |-
+    "Celeb Rose Enchanter" + "Celeb Rose Wiz"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Celeb Rose
+images:
+- index: 1
+  image: CelebRoseInfluencers-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP044
+    set_name: Transamu of Transcendence
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1039746
