--- a/data/rush/yugipedia1037157.yaml
+++ b/data/rush/yugipedia1037157.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    TBA
+    None
   de:
   es:
   fr:
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    TBA
+    Send the top card of your Deck to the Graveyard. If you sent a LIGHT Attribute Galaxy Type monster to the Graveyard by this effect, you can choose up to 3 face-up monsters on your field. If you do, those monsters inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if they attack a Defense Position monster this turn. Then, if you chose "Transamu Rainac" by this effect, you can change all Attack Position monsters on your opponent's field to face-up Defense Position.
   de:
   es:
   fr:
