--- a/rush.yaml
+++ b/rush.yaml
@@ -105624,7 +105624,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 9 or lower LIGHT Attribute Spellcaster Type monster from your Graveyard to your field in face-up Defense Position. Then, if this card is equipped with an Equip Spell Card, it can make up to 2 attacks on monsters during this turn.
+    Special Summon 1 Level 9 or lower LIGHT Attribute Spellcaster Type monster from your Graveyard to your field in face-up Defense Position. Then, if this card is equipped with an Equip Spell Card, this card can make up to 2 attacks on monsters during this turn.
   de:
   es:
   fr:
@@ -130221,7 +130221,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top card of your Deck to the Graveyard. If you sent a LIGHT Attribute Galaxy Type monster to the Graveyard by this effect, you can choose up to 3 face-up monsters on your field. If you do, those monsters inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if they attack a Defense Position monster this turn. Then, if you chose "Transamu Rainac" by this effect, you can change all Attack Position monsters on your opponent's field to face-up Defense Position.
+    Send the top card of your Deck to the Graveyard. If you sent a LIGHT Attribute Galaxy Type monster to the Graveyard by this effect, you can choose up to 3 face-up monsters on your field. If you do, those monsters inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if they attack a Defense Position monster this turn. Then, if it was "Transamu Rainac", you can change all Attack Position monsters on your opponent's field to face-up Defense Position.
   de:
   es:
   fr:
@@ -132378,7 +132378,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Place 1 monster from your opponent's Graveyard on the bottom of the Deck, and this card gains ATK equal to [the Level of the monster placed by this effect] x 200 until the end of this turn. Then, if this card is equipped with an Equip Spell Card, this turn, this card cannot be destroyed by card effects and can make up to 2 attacks on monsters.
+    Place 1 monster from your opponent's Graveyard on the bottom of their Deck, and this card gains ATK equal to [the Level of the monster placed by this effect] x 200 until the end of this turn. Then, if this card is equipped with an Equip Spell Card, this turn, this card cannot be destroyed by card effects, and can make up to 2 attacks on monsters.
   de:
   es:
   fr:
