--- a/data/cards/28958464.yaml
+++ b/data/cards/28958464.yaml
@@ -1,5 +1,5 @@
 konami_id: 20029
-password:
+password: 28958464
 name:
   en: 'Spell Card: "Monster Reborn"'
   de:
@@ -30,7 +30,7 @@ card_type: Spell
 property: Quick-Play
 images:
 - index: 1
-  image: SpellCardMonsterReborn-VJMP-JP-OP.png
+  image: SpellCardMonsterReborn-VJMP-JP-UR.png
 sets:
   ja:
   - set_number: VJMP-JP250
