--- a/data/cards/09627468.yaml
+++ b/data/cards/09627468.yaml
@@ -8,7 +8,7 @@ name:
   it: Mastodontico Alveare Egemone - Zexstagger
   pt: Enorme Colmeia Hegemon - Zexstagger
   ja: <ruby>甲<rt>こう</rt></ruby><ruby>虫<rt>ちゅう</rt></ruby><ruby>合<rt>がっ</rt></ruby><ruby>体<rt>たい</rt></ruby>ゼクスタッガー
-  ja_romaji: Kōchū Gattai Zekusutaggā
+  ja_romaji: Kōchūgattai Zekusutaggā
   ko: 갑충합체 젝스태거
   ko_rr: Gachungbapche Jekseutaegeo
   zh-TW:
