--- a/rush.yaml
+++ b/rush.yaml
@@ -132425,3 +132425,139 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1039746
+---
+konami_id:
+name:
+  en: Catapult Baby Turtle
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: カタパルト・ベビータートル
+  ja_romaji: Kataparuto Bebī Tātoru
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 card from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Shuffle 2 monsters from your opponent's Graveyard into the Deck. Then, you can Special Summon 1 "Gaia the Dragon Champion" or 1 Aqua Type monster with 2000 DEF from your Graveyard face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Aqua / Effect
+attribute: WATER
+level: 4
+atk: 500
+def: 1000
+series:
+- Gaia
+images:
+- index: 1
+  image: CatapultBabyTurtle-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP030
+    set_name: Transamu of Transcendence
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1039879
+---
+konami_id:
+name:
+  en: Swift Gaia the Dragon Champion
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>疾<rt>しっ</rt></ruby><ruby>風<rt>ぷう</rt></ruby>の<ruby>竜<rt>りゅう</rt></ruby><ruby>騎<rt>き</rt></ruby><ruby>士<rt>し</rt></ruby>ガイア
+  ja_romaji: Shippū no Ryūkishi Gaia
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    If this card attacks a Defense Position monster this turn, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). Then, if you have no cards in your hand, you can draw 1 card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Fusion / Effect
+attribute: DARK
+level: 7
+atk: 2600
+def: 2100
+materials:
+  en: |-
+    1 Warrior Type monster with 2100 DEF + "Curse of Dragon"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Gaia
+images:
+- index: 1
+  image: SwiftGaiatheDragonChampion-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP047
+    set_name: Transamu of Transcendence
+    rarities:
+    - Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1039881
