--- a/data/cards/60800381.yaml
+++ b/data/cards/60800381.yaml
@@ -18,19 +18,19 @@ text:
     "Junk Synchron" + 1+ non-Tuner monsters
     If this card is Synchro Summoned: It gains ATK equal to the total ATK of all Level 2 or lower monsters you currently control.
   de: |-
-    „Gerümpelsynchronisierer“ + 1 oder mehr Nicht-Empfänger-Monster
+    „Gerümpelsynchronisierer“ + 1+ Nicht-Empfänger-Monster
     Falls diese Karte als Synchrobeschwörung beschworen wird: Sie erhält ATK in Höhe der Summe der ATK aller Monster der Stufe 2 oder niedriger, die du derzeit kontrollierst.
   es: |-
-    "Sincronizador de Basura" + 1 o más monstruos que no sean Cantantes
-    Si esta carta es Invocada por Sincronía: gana ATK igual al ATK total de todos los monstruos de Nivel 2 o menor que controles actualmente.
+    "Sincronizador de Basura" + 1+ monstruos que no sean Cantantes
+    Si esta carta es Invocada por Sincronía: ésta gana ATK igual al ATK total de todos los monstruos de Nivel 2 o menor que controles en este momento.
   fr: |-
-    "Robot Synchronique" + 1 monstre non-Syntoniseur ou plus
+    "Robot Synchronique" + 1+ monstre non-Syntoniseur
     Si cette carte est Invoquée par Synchronisation : elle gagne une ATK égale à la somme des ATK de tous les monstres de max. Niveau 2 que vous contrôlez actuellement.
   it: |-
-    "Rottame Synchron" + 1 o più mostri non-Tuner
+    "Rottame Synchron" + 1+ mostri non-Tuner
     Se questa carta viene Synchro Evocata: essa guadagna ATK pari alla somma degli ATK di tutti i mostri di Livello 2 o inferiore che controlli attualmente.
   pt: |-
-    "Sucata Sincron" + 1 ou mais monstros não-Reguladores
+    "Sucata Sincron" + 1+ monstros não-Reguladores
     Se este card for Invocado por Invocação-Sincro: ele ganha ATK igual ao ATK total de todos os monstros de Nível 2 ou menos que você controla atualmente.
   ja: |-
     「ジャンク・シンクロン」＋チューナー以外のモンスター１体以上
